# Bloomlog

./: .env  .gitignore  main.py  pyproject.toml
backend/app/: crud.py  initial_data.py  main.py  utils.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: journal_entries.py  login.py  media.py  mood.py  users.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: JournalEntry.py  Users.py
backend/app/services/: storage_service.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css  types.ts
frontend/src/api/: auth.ts  client.ts  index.ts  journal.ts
frontend/src/components/: EntryModal.tsx  JournalCard.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Dashboard.tsx  EntryDetail.tsx  Login.tsx  Signup.tsx
