[project]
name = "bloomlog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "boto3>=1.43.6",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "jwt>=1.4.0",
    "psycopg>=3.3.4",
    "pwdlib[argon2,bcrypt]>=0.3.0",
    "pydantic-settings>=2.14.0",
    "pydentic>=0.0.1.dev3",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.27",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.46.0",
]
